<resources>
    <string name="app_name">Cat&amp;DogApp</string>
    <string name="canineText">Are you afraid of canine?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="scale_text">On a scale of 1 to 10 how comfortable are you around felines?</string>
    <string name="defaultSeekbar">Comfortableness: 0/10</string>
    <string name="cutiest_text">Which one is the cutiest?</string>
    <string name="dog_title">Dog</string>
    <string name="cat_title">Cat</string>
    <string name="parrot_title">Parrot</string>
    <string name="drool_text">Are you ok with creatures who drool?</string>
    <string name="button_title">Show Results</string>
    <string name="title">You are a ....</string>
    <string name="result_text">dog or cat</string>
</resources>
