<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="catdogapp.alan.com.catdogapp.MainActivity"
    android:background="#cb5b5b">

    <ScrollView
        android:background="#eee8e8"
        android:layout_marginTop="34dp"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="400dp"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
                <TextView
                    android:text="@string/canineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/radioGroupCanine"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioCanineNo"
                        android:text="@string/no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/radioCanineYes"
                        android:text="@string/yes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RadioGroup>

            <TextView
                android:padding="10dp"
                android:text="@string/scale_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
                <SeekBar
                    android:id="@+id/seekBar_Feline"
                    android:max="10"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/seekBarProgress"
                android:text="@string/defaultSeekbar"
                android:paddingBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="10dp"
                android:text="@string/cutiest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBoxCutestDog"
                android:text="@string/dog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBoxCutestCat"
                android:text="@string/cat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBoxCutestParrot"
                android:text="@string/parrot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"/>

            <TextView
                android:text="@string/drool_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/radioGroupDrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/DroolNo"
                    android:text="@string/no_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/DroolYes"
                    android:text="@string/yes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/showResults"
        android:layout_centerHorizontal="true"
        android:text="@string/button_title"
        android:layout_below="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
